<resources>
    <string name="app_name">ApplicationTemplate</string>

    <string name="tag_messages" translatable="false">Messages</string>
    <string name="tag_talk" translatable="false">Talk</string>
    <string name="tag_profile" translatable="false">Profile</string>
    <string name="tag_options" translatable="false">Options</string>
    <string name="tag_care_team" translatable="false">Care Team</string>
    <string name="tag_back_button" translatable="false">Back Button</string>

    <string name="messages">Messages</string>
    <string name="talk">Talk</string>
    <string name="profile">Profile</string>
    <string name="options">Options</string>
    <string name="care_team">Care Team</string>

    <string name="enter_valid_phone_underline"><u>Please enter a valid phone num#</u></string>
    <string name="enter_valid_phone">Please enter a valid phone num#</string>

</resources>