<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">

    <data>
        <import type="aalto.kotlin.experiment.applicationtemplate.MainViewModel"/>
        <variable name="viewModel" type="MainViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <!-- LEFT VERTICAL GUIDELINE -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/first_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".20"/>

        <!-- SECOND VERTICAL GUIDELINE -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/second_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".40" />

        <!-- THIRD VERTICAL GUIDELINE -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/third_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".60" />

        <!-- RIGHT VERTICAL GUIDELINE -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fourth_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".80"/>

        <!-- COLUMN IN THE MIDDLE: PROFILE -->
        <androidx.appcompat.widget.AppCompatTextView
            android:tag="@string/tag_profile"
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/second_vertical_guideline"
            app:layout_constraintRight_toLeftOf="@id/third_vertical_guideline"
            android:textSize="@dimen/navigation_text_size"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            tools:text="Profile"/>

        <ImageView
            android:tag="@string/profile"
            android:id="@+id/profile_img"
            android:layout_width="@dimen/navigation_icon_size"
            android:layout_height="@dimen/navigation_icon_size"
            android:background="@drawable/profile"
            android:cropToPadding="false"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            android:scaleType="fitXY"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/second_vertical_guideline"
            app:layout_constraintRight_toLeftOf="@id/third_vertical_guideline"
            app:layout_constraintRight_toRightOf="parent" />

        <!-- LEFT COLUMN: MESSAGES -->
        <androidx.appcompat.widget.AppCompatTextView
            android:tag="@string/tag_messages"
            android:id="@+id/messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/first_vertical_guideline"
            android:textSize="@dimen/navigation_text_size"
            android:text="@string/messages"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            tools:text="Messages"/>

        <ImageView
            android:tag="@string/messages"
            android:id="@+id/messages_img"
            android:layout_width="@dimen/navigation_icon_size"
            android:layout_height="@dimen/navigation_icon_size"
            android:background="@drawable/messages"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/first_vertical_guideline"
            app:layout_constraintBottom_toTopOf="@id/messages"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <!-- LEFT COLUMN: CARE TEAM -->
        <androidx.appcompat.widget.AppCompatTextView
            android:tag="@string/tag_care_team"
            android:id="@+id/care_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fourth_vertical_guideline"
            android:textSize="@dimen/navigation_text_size"
            android:text="@string/care_team"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            tools:text="care_team"/>

        <ImageView
            android:tag="@string/care_team"
            android:id="@+id/care_team_img"
            android:layout_width="@dimen/navigation_icon_size"
            android:layout_height="@dimen/navigation_icon_size"
            android:background="@drawable/care_team"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/care_team"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fourth_vertical_guideline"/>

        <!-- SECOND COLUMN ON LEFT : TALK -->
        <androidx.appcompat.widget.AppCompatTextView
            android:tag="@string/tag_talk"
            android:id="@+id/talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/first_vertical_guideline"
            app:layout_constraintRight_toLeftOf="@id/second_vertical_guideline"
            android:textSize="@dimen/navigation_text_size"
            android:text="@string/talk"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            tools:text="talk"/>

        <ImageView
            android:tag="@string/talk"
            android:id="@+id/talk_img"
            android:layout_width="@dimen/navigation_icon_size"
            android:layout_height="@dimen/navigation_icon_size"
            android:background="@drawable/talk"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/talk"
            app:layout_constraintLeft_toRightOf="@id/first_vertical_guideline"
            app:layout_constraintRight_toLeftOf="@id/second_vertical_guideline"/>

        <!-- SECOND COLUMN ON RIGHT: OPTIONS -->
        <androidx.appcompat.widget.AppCompatTextView
            android:tag="@string/tag_options"
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/third_vertical_guideline"
            app:layout_constraintRight_toLeftOf="@id/fourth_vertical_guideline"
            android:textSize="@dimen/navigation_text_size"
            android:text="@string/options"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            tools:text="options"/>

        <ImageView
            android:tag="@string/options"
            android:id="@+id/options_img"
            android:layout_width="@dimen/navigation_icon_size"
            android:layout_height="@dimen/navigation_icon_size"
            android:background="@drawable/options"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:onClick="@{viewModel::onHeaderItemClicked}"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@id/options"
            app:layout_constraintLeft_toRightOf="@id/third_vertical_guideline"
            app:layout_constraintRight_toLeftOf="@id/fourth_vertical_guideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>